hover active on footer

--- a/index.html
+++ b/index.html
@@ -352,19 +352,19 @@
               <div class="row mt-5">
                 <div class="col text-center col-6 col-md-4">
                   <div class="about_image col mt-lg-4 text">
-                    <img src="/images/bombillo.png" alt="bombillo">
+                    <img src="images/bombillo.png" alt="bombillo">
                     <p>Creativa</p>
                   </div>
                 </div>
                 <div class="col-4 text-center col-6 col-md-4 ">
                   <div class="about_image col mt-lg-4">
-                    <img src="/images/montana.png" alt="montana">
+                    <img src="images/montana.png" alt="montana">
                     <p>Perseverante</p>
                   </div>
                 </div>
                 <div class="col text-center col-6 col-md-4">
                   <div class="about_image col mt-lg-4">
-                    <img src="/images/auto.png" alt="autodidacta">
+                    <img src="images/auto.png" alt="autodidacta">
                     <p>Autodidacta</p>
                   </div>
                 </div>
@@ -390,16 +390,16 @@
       <div class="row">
         <div class="social col-12 col-lg-6 col-sm-6 pt-2">
           <ul class="navbar-nav text-md-left">
-            <li class="nav-item pb-0 pt-0">
+            <li class="nav-item2 pb-0 pt-0">
               <a class="nav-link nav_text2" href="#hero"><small>Inicio</small> </a>
             </li>
-            <li class="nav-item pb-0 pt-0">
+            <li class="nav-item2 pb-0 pt-0">
               <a class="nav-link nav_text2" href="#proyectos"><small>Proyectos</small> </a>
             </li>
-            <li class="nav-item pb-0 pt-0">
+            <li class="nav-item2 pb-0 pt-0">
               <a class="nav-link nav_text2" href="#tecnologias"><small>Tecnologías</small></a>
             </li>
-            <li class="nav-item pb-0 pt-0">
+            <li class="nav-item2 pb-0 pt-0">
               <a class="nav-link nav_text2" href="#footer"><small>Contacto</small></a>
             </li>
           </ul>
