--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
   <link rel="stylesheet" href="css/styles.css">
   <link href="https://fonts.googleapis.com/css?family=Lato&display=swap" rel="stylesheet">
 
-  <title>Document</title>
-
+  <title>Portfolio</title>
+  <link rel="icon" type="image/favicon.png" href="images/favicon.png" />
 </head>
 
 <body data-spy="scroll" data-target=".navbar" data-offset="1000">
