--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <link rel="stylesheet" href="css/styles.css">
   <link href="https://fonts.googleapis.com/css?family=Lato&display=swap" rel="stylesheet">
 
-  <title>Portfolio</title>
+  <title>Inna's Portfolio</title>
   <link rel="icon" type="image/favicon.png" href="images/favicon.png" />
 </head>
 
