adding favicon title

--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 
 <head>
   <meta charset="UTF-8">
+  <title>Inna's Portfolio</title>
+  <link rel="icon" type="images/favicon.png" href="images/favicon.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <!-- Bootstrap CSS -->
@@ -11,8 +13,6 @@
   <link rel="stylesheet" href="css/styles.css">
   <link href="https://fonts.googleapis.com/css?family=Lato&display=swap" rel="stylesheet">
 
-  <title>Ingrid Natalia</title>
-  <link rel="icon" type="images/favicon.png" href="images/favicon.png" />
 </head>
 
 <body data-spy="scroll" data-target=".navbar" data-offset="1000">
