--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>Inna's Portfolio</title>
-  <link rel="icon" type="images/favicon.png" href="images/favicon.png" />
+  <title>Inna's Portfolio </title>
+  <link rel="icon" type="favicon.png" href="favicon.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <!-- Bootstrap CSS -->
