--- a/index.html
+++ b/index.html
@@ -57,7 +57,10 @@
         </div>
       </div>
     </div>
+    <button class="botonF1 text-center" >
 
+      <a class="image_scroll"   href="#hero" ><img src="images/up.png" width="30"  alt="up"> </a>
+    </button>
   </section>
 
   <!--Proyectos-->
@@ -87,7 +90,7 @@
             <p class="card-text mt-lg-3"> Se realiza una aplicación similar a instagram para realizar en django.
               La aplicación se basa en publicaciones de fotografías hechas por usuarios, de allí cada usuario tendrá
               publicaciones correspondientes, seguidores , personas seguidas y los detalles de las publicaciones.
-              <br><small><a href="">Ver más..</a></small>
+              <br><small><a href="https://github.com/innacroft/Django/tree/master/platzigram">Ver más..</a></small>
 
             </p>
           </div>
@@ -109,7 +112,7 @@
           </div>
           <p class="card-text mt-lg-3"> Se realiza la estructura básica de un crud puramente en python para agregar,
             editar,eliminar y buscar usuarios dentro de una base de datos.
-            <br><small><a href="">Ver más..</a></small>
+            <br><small><a href="https://github.com/innacroft/Crud_users">Ver más..</a></small>
           </p>
         </div>
       </div>
@@ -158,12 +161,12 @@
             Los dispositivos que permiten el acceso, deben estar intercomunicados para poder validar en sus bases de
             datos el tipo de acceso al usuario, la fecha y hora del último acceso y por último si el usuario está
             ingresando o saliendo.
-            Es por ello que se dentro del sistema de múltiples dispositivos de acceso, se implementa el patrón de
+            Es por ello que dentro del sistema de múltiples dispositivos de acceso, se implementa el patrón de
             maestro esclavo dentro del sistema,
             para que sólo uno de ellos posea
             el control sobre un área, así mismo para realizar la comunicación entre éste como maestro y las demás
             (esclavas), se
-            implemento un microservicio para realizar esta funcionalidad.
+            implementó un microservicio para realizar esta funcionalidad.
             <br><small><a href="">Ver más..</a></small>
           </p>
         </div>
@@ -193,7 +196,7 @@
             general : edificios,zonas,grupos de acceso; es por ello que el dispositivo debía contar con
             algún protocolo de comunicación, control de periféricos externos, acceso a sensores y lectores,
             además de su propia base de datos. <br>
-            Dado a lo anterior en el dispositivo se integró un software capaz de controlar periféricos, acceso a
+            Dado a lo anterior en el dispositivo se integra un software capaz de controlar periféricos, acceso a
             sensores, con base de datos ligera para un sistema embebido ,un protocolo de comunicación y una interfaz
             gráfica.
             <br><small><a href="">Ver más..</a></small>
@@ -217,10 +220,10 @@
           </div>
           <p class="card-text mt-lg-3"> Se emplearon dos kits de robótica Bioloid humanoides y el
             tema de fútbol de robots, para implementar visión artificial en los robots. <br>
-            El campo era evaluado desde una cámara en la parte superior del campo que hacía reconocimiento
-            visual de color de los robots y la pelota, posteriormente los comandos eran enviados vía zigbee
-            para que los robots se movieran dependiendo de su respectivo rol: arquero o delantero.
-            <br><small><a href="">Ver más..</a></small>
+            El campo es evaluado desde una cámara en la parte superior, donde se hace el  reconocimiento
+            visual de color de los robots y la pelota, posteriormente los comandos son enviados vía zigbee
+            para que los robots se desplacen dependiendo de su respectivo rol: arquero o delantero.
+            <br><small><a href="https://www.youtube.com/watch?v=ITcHHV_uGEo">Ver más..</a></small>
           </p>
         </div>
       </div>
@@ -243,9 +246,9 @@
           <p class="card-text mt-lg-3">Una planta de mezclado de aditivos, requería
             que sus procesos fueran automáticos, con bajo presupuesto, para que el
             proceso fuera de menor riesgo posible para el operario. <br>
-            Se implementaron sensores electrónicos,actuadores, un tablero de control,motores y válvulas.
+            Se implementan sensores electrónicos,actuadores, un tablero de control,motores y válvulas.
             Todo esto controlado y visualizado desde una interfaz gráfica de una raspberry-pi3.
-            <br><small><a href="">Ver más..</a></small>
+            <br><small><a href="https://github.com/innacroft/Planta_mezclado_aditivos">Ver más..</a></small>
           </p>
 
         </div>
@@ -378,9 +381,7 @@
     </div>      
   </section>
 
-  <button class="botonF1 text-center">
-    <a class="image_scroll" href="#hero"><img src="images/up.png" width="30" alt=""> </a>
-  </button>
+
 
   <!-------footer----------->
   <footer id="footer" class="pb-4 pt-4">
