--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
           </div>
           <p class="card-text mt-lg-3"> Se realiza la estructura básica de un crud puramente en python para agregar,
             editar,eliminar y buscar usuarios dentro de una base de datos.
-            <br><small><a href="https://github.com/innacroft/Crud_users">Ver más..</a></small>
+            <br><small><a href="https://github.com/innacroft/Crud_users" target="_blank">Ver más..</a></small>
           </p>
         </div>
       </div>
@@ -223,7 +223,7 @@
             El campo es evaluado desde una cámara en la parte superior, donde se hace el  reconocimiento
             visual de color de los robots y la pelota, posteriormente los comandos son enviados vía zigbee
             para que los robots se desplacen dependiendo de su respectivo rol: arquero o delantero.
-            <br><small><a href="https://www.youtube.com/watch?v=ITcHHV_uGEo">Ver más..</a></small>
+            <br><small><a href="https://www.youtube.com/watch?v=ITcHHV_uGEo" target="_blank">Ver más..</a></small>
           </p>
         </div>
       </div>
@@ -248,7 +248,7 @@
             proceso fuera de menor riesgo posible para el operario. <br>
             Se implementan sensores electrónicos,actuadores, un tablero de control,motores y válvulas.
             Todo esto controlado y visualizado desde una interfaz gráfica de una raspberry-pi3.
-            <br><small><a href="https://github.com/innacroft/Planta_mezclado_aditivos">Ver más..</a></small>
+            <br><small><a href="https://github.com/innacroft/Planta_mezclado_aditivos" target="_blank">Ver más..</a></small>
           </p>
 
         </div>
