--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
             <p class="card-text mt-lg-3"> Se realiza una aplicación similar a instagram para realizar en django.
               La aplicación se basa en publicaciones de fotografías hechas por usuarios, de allí cada usuario tendrá
               publicaciones correspondientes, seguidores , personas seguidas y los detalles de las publicaciones.
-              <br><small><a href="https://github.com/innacroft/Django/tree/master/platzigram">Ver más..</a></small>
+              <br><small><a href="https://github.com/innacroft/Django/tree/master/platzigram" target="_blank">Ver más..</a></small>
 
             </p>
           </div>
@@ -223,7 +223,7 @@
             El campo es evaluado desde una cámara en la parte superior, donde se hace el  reconocimiento
             visual de color de los robots y la pelota, posteriormente los comandos son enviados vía zigbee
             para que los robots se desplacen dependiendo de su respectivo rol: arquero o delantero.
-            <br><small><a href="https://www.youtube.com/watch?v=ITcHHV_uGEo" target="_blank">Ver más..</a></small>
+            <br><small><a href="https://www.youtube.com/watch?v=ITcHHV_uGEo" target="_blank" >Ver más..</a></small>
           </p>
         </div>
       </div>
