--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
             <p class="card-text mt-lg-3"> Se realiza una aplicación similar a instagram para realizar en django.
               La aplicación se basa en publicaciones de fotografías hechas por usuarios, de allí cada usuario tendrá
               publicaciones correspondientes, seguidores , personas seguidas y los detalles de las publicaciones.
-              <br><small><a href="https://github.com/innacroft/Django/tree/master/platzigram">Ver más..</a></small>
+              <br><small><a href="https://github.com/innacroft/Django/tree/master/platzigram" target="_blank">Ver más..</a></small>
 
             </p>
           </div>
